--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <nav>
+            <h1>MovieTube</h1>
+            <ul>
+                <li>Action</li>
+                <li>Thriller</li>
+                <li>Comedy</li>
+                <li>Horror</li>
+            </ul>
+        </nav>
+        <main>
+            <aside>
+                <ul>
+                    <li>Action</li>
+                    <li>Thriller</li>
+                    <li>Comedy</li>
+                    <li>Horror</li>
+                </ul>
+            </aside>
+            <section>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+            </section>
+        </main>
     </body>
 </html>
