done some changes to make it responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
                 <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
                 <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
-                <article><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
+                <article class="lastone"><img src="images/thumbnail.jpg" alt="movie">Some Movie Title</article>
             </section>
         </main>
     </body>
